welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:3: error: Int does not take parameters
    var d = litMessage().toInt()
                              ^