welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
  for (longeur <- 1 to getMondeLargeur()){
    var d = litMessage().toInt()
    colonne(d)
  } 
  avance(getMondeHauteur()-1)
  gauche()
  avance(getMondeLargeur()-1)
  droite()
}


def getMotif():Array[Color]={
  var T = new Array[Color](getMondeHauteur())
  for (pas <- 0 to (getMondeHauteur()-1)){
    T(pas)=getCouleurSol()
    avance()
  }
  recule(getMondeHauteur() - 1)
  return T
}

def decalage(n:Int):Array[Color]={
  var T = getMotif()
  var D = new Array[Color](getMondeHauteur())
  for (pas <- 0 to (getMondeHauteur() - 1)){
    D(pas)=T((pas + n)%(getMondeHauteur()))
  }
  return D
}

def colonne(n:Int){
  var D = decalage(n)
  gauche()
  avance()
  droite()
  avance()
  for (pas <- 0 to (getMondeHauteur()-1)){
    setCouleurBrosse(D(pas))
    baisseBrosse()
    leveBrosse()
    avance()
  }
}